# ICWE2020-results

./: .gitmodules  README.md
graphs/: client-benchmark.html  nmbs-updates.html  server-benchmark.html
irail-query-extractor/: .gitignore  Cargo.toml  example-query-1.json  example-query-2.json
irail-query-extractor/src/: dateformatter.rs  downloader.rs  enhancer.rs  lib.rs  splitter.rs
live-data-analyzer/: data-extractor.js  package.json
results/client/11/Bandwidth/Polling/: leuven-schaarbeek_pnr.txt  leuven-schaarbeek_pr.txt  leuven-schaarbeek_rx_pnr.csv  leuven-schaarbeek_rx_pr.csv  leuven-schaarbeek_tx_pnr.csv  leuven-schaarbeek_tx_pr.csv
results/client/11/Bandwidth/Pushing/: leuven-schaarbeek_rx_snr.csv  leuven-schaarbeek_rx_sr.csv  leuven-schaarbeek_snr.txt  leuven-schaarbeek_sr.txt  leuven-schaarbeek_tx_snr.csv  leuven-schaarbeek_tx_sr.csv
results/client/11/Bandwidth/Reference/: leuven-schaarbeek_rnr.txt  leuven-schaarbeek_rr.txt  leuven-schaarbeek_rx_rnr.csv  leuven-schaarbeek_rx_rr.csv  leuven-schaarbeek_tx_rnr.csv  leuven-schaarbeek_tx_rr.csv
results/client/11/CPU/Polling/: leuven-schaarbeek_pnr.csv  leuven-schaarbeek_pnr.txt  leuven-schaarbeek_pr.csv  leuven-schaarbeek_pr.txt
results/client/11/CPU/Pushing/: leuven-schaarbeek_snr.csv  leuven-schaarbeek_snr.txt  (+2 more)
results/server/polling-server/: cpu.csv  cpu.txt  mem.csv  mem.txt  network.csv  network.rx.csv  network.tx.csv  network.txt  network_grep.txt
results/server/pushing-server/: cpu.csv  cpu.txt  mem.csv  mem.txt  network.rx.csv  network.tx.csv  network.txt  network_grep.txt
(+412 files in other folders)
