[package]
name = "irail_query_extractor"
version = "0.1.0"
authors = ["Dylan Van Assche <dylan.vanassche@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.0"
error-chain = "0.12.1"
tar = "0.4.36"
flate2 = "1.0.13"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "*"
chrono = "*"
time = "*"

